Fixed services alignment

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -24,11 +24,12 @@ body {
 header {
   position: relative;
   top: 1rem;
-  background-color: cadetblue;
   padding-top: 1rem;
   padding-bottom: 1rem;
   display: flex;
   justify-content: space-between;
+  background-color: cadetblue;
+  color: white;
 }
 
 .logo {
@@ -87,6 +88,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 5rem;
   height: 8rem;
   margin: 3rem;
@@ -99,4 +101,8 @@ a {
 .service-item img {
   max-width: 100%;
   height: auto;
+}
+
+.service-item span {
+  text-align: center;
 }
